fix listOf and log